trying to fix style issues on mobile, leaning towards bootstrap to resolve

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: fixed;
+
   align-items: center;
 }
 
@@ -11,7 +11,7 @@ html {
   padding: 0;
   overflow-y: auto;
   overscroll-behavior-y: auto;
-  position: fixed;
+
 }
 
 .App {
@@ -21,12 +21,13 @@ html {
   flex-direction: column;
   justify-content: center;
   flex-wrap: nowrap;
+
 }
 
 .App-body {
   overflow-y: auto;
   overscroll-behavior-y: auto;
-  position: relative;
+
   margin: 0%;
   padding: 0%;
   text-align: center;
